<resources>
    <string name="app_name">Simple To Do</string>
    <string name="edit_text">Edit</string>
    <string name="delete_dialog_title">Delete Items?</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="action_search">Search..</string>
    <string name="settings">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="default_theme">Default</string>
    <string name="move_test_to">Move Test to:</string>
    <string name="move">Move</string>
    <string name="main_list">Main List</string>
    <string name="level_up">Level Up</string>
    <string name="move_to_main_list">MOVE TO MAIN LIST</string>
    <string name="move_to_this_list">MOVE TO THIS LIST</string>
    <string name="sort_order">Sort order</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="lists_first">Lists first</string>
    <string name="add_multiple_hint">"Type or paste your list here\nEach new line creates a new item"</string>
    <string name="add_to_main_list">Add to Main List</string>
    <string name="add_multiple_title">Add Multiple</string>
    <string name="copy_item_text_text">Copy item text</string>
    <string name="share_item_text_text">Share item</string>
    <string name="move_item_text">Move</string>
    <string name="edit_item_two_taps">Edit (2 taps)</string>
    <string name="delete_this_item_text_text">Delete this item</string>
</resources>
