<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:fitsSystemWindows="true"
        android:id="@+id/move_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary"
        >
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/fragment_move_to_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_test_to"/>

    <TextView
        android:id="@+id/fragment_parent_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />



    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="300dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:id="@+id/fragment_main_list_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/main_list"/>

        <Button
            android:layout_width="0dp"
            android:id="@+id/fragment_level_up_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/level_up"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/fragment_move_to_main_list_button"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/move_to_main_list"/>

</LinearLayout>